# qat

./: .gitignore  .travis.yml  CMakeLists.txt  CollectionModel.cpp  LICENSE  OptionsDialog.cpp  OptionsDialog.ui  Qat.pro  README.md
src/: Catalog.cpp  Catalog.h  CollectionModel.h  OptionsDialog.h  Qat.pro  Tree.hpp  TreeModel.cpp  TreeModel.h  TreeModelItem.h  main.cpp  mainwindow.cpp
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
